<resources>
    <string name="app_name">mini-projet3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conn_title">Identify yourself!</string>
    <string name="text_tvID">ID number :</string>
    <string name="text_tvPwd">Password :</string>
    <string name="hintTvId">Type your ID number here</string>
    <string name="hintTvPwd">Type your password here</string>
    <string name="strAll">All</string>
    <string name="strAdd">Add</string>
    <string name="txt_conn">Connexion</string>
    <string name="toast_conn_refus">Authentification denied</string>
    <string name="strFavorites">Favorites</string>
</resources>
